Made the BTRFS metadata "single" since we are using Hardware RAID

--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -15,8 +15,18 @@ coreos:
       [Service]
       Type=oneshot
       RemainAfterExit=yes
-      ExecStart=/usr/sbin/wipefs -f /dev/sda
-      ExecStart=/usr/sbin/mkfs.btrfs -f /dev/sda
+      ExecStart=/usr/sbin/wipefs /dev/sda
+      ExecStart=/usr/sbin/mkfs.btrfs -m single /dev/sda
+  - name: format-data.service
+    command: start
+    content: |
+      [Unit]
+      Description=Formats the data drive
+      [Service]
+      Type=oneshot
+      RemainAfterExit=yes
+      ExecStart=/usr/sbin/wipefs /dev/sdb
+      ExecStart=/usr/sbin/mkfs.btrfs -m single /dev/sdb
   - name: var-lib-docker.mount
     command: start
     content: |
@@ -29,16 +39,6 @@ coreos:
         What=/dev/sda
         Where=/var/lib/docker
         Type=btrfs
-  - name: format-data.service
-    command: start
-    content: |
-      [Unit]
-      Description=Formats the data drive
-      [Service]
-      Type=oneshot
-      RemainAfterExit=yes
-      ExecStart=/usr/sbin/wipefs -f /dev/sdb
-      ExecStart=/usr/sbin/mkfs.btrfs -f /dev/sdb
   - name: data.mount
     command: start
     content: |
