--- a/coreos/cloud-config/worker-cloud-config.yml
+++ b/coreos/cloud-config/worker-cloud-config.yml
@@ -2,33 +2,33 @@
 
 
 coreos:
-  - name: format-var-lib-docker.service
-    command: start
-    content: |
-      [Unit]
-      Description=Formats the ephemeral drive
-      [Service]
-      Type=oneshot
-      RemainAfterExit=yes
-      ExecStart=/usr/sbin/wipefs -f /dev/sda
-      ExecStart=/usr/sbin/mkfs.btrfs -m single -f /dev/sda
-  - name: format-data.service
-    command: start
-    content: |
-      [Unit]
-      Description=Formats the data drive
-      [Service]
-      Type=oneshot
-      RemainAfterExit=yes
-      ExecStart=/usr/sbin/wipefs -f /dev/sdb
-      ExecStart=/usr/sbin/mkfs.btrfs -m single -f /dev/sdb
+  # - name: format-var-lib-docker.service
+  #   command: start
+  #   content: |
+  #     [Unit]
+  #     Description=Formats the ephemeral drive
+  #     [Service]
+  #     Type=oneshot
+  #     RemainAfterExit=yes
+  #     ExecStart=/usr/sbin/wipefs -f /dev/sda
+  #     ExecStart=/usr/sbin/mkfs.btrfs -m single -f /dev/sda
+  # - name: format-data.service
+  #   command: start
+  #   content: |
+  #     [Unit]
+  #     Description=Formats the data drive
+  #     [Service]
+  #     Type=oneshot
+  #     RemainAfterExit=yes
+  #     ExecStart=/usr/sbin/wipefs -f /dev/sdb
+  #     ExecStart=/usr/sbin/mkfs.btrfs -m single -f /dev/sdb
   - name: var-lib-docker.mount
     command: start
     content: |
         [Unit]
         Description=Mount ephemeral to /var/lib/docker
-        Requires=format-var-lib-docker.service
-        After=format-var-lib-docker.service
+        # Requires=format-var-lib-docker.service
+        # After=format-var-lib-docker.service
         Before=docker.service
         [Mount]
         What=/dev/sda
@@ -39,8 +39,8 @@ coreos:
     content: |
         [Unit]
         Description=Mount data
-        Requires=format-data.service
-        After=format-data.service
+        # Requires=format-data.service
+        # After=format-data.service
         [Mount]
         What=/dev/sdb
         Where=/data
