--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -22,14 +22,14 @@ write_files:
       echo "Environment=\"ETCD_INITIAL_ADVERTISE_PEER_URLS=http://$PRIV_IP:2380\"" >> $TARGET
       echo "Environment=\"ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379\"" >> $TARGET
       echo "Environment=\"ETCD_LISTEN_PEER_URLS=http://0.0.0.0:2380\"" >> $TARGET
-      echo "Environment=\"ETCD_INITIAL_CLUSTER=r105u03=http://10.105.0.3:2380,r105u05=http://10.105.0.5:2380,r105u07=http://10.105.0.7:2380\"" >> $TARGET
+      echo "Environment=\"ETCD_INITIAL_CLUSTER=r105u01=http://10.105.0.1:2380,r105u03=http://10.105.0.3:2380,r105u05=http://10.105.0.5:2380,r105u07=http://10.105.0.7:2380,r105u09=http://10.105.0.9:2380\"" >> $TARGET
       echo "Environment=\"ETCD_INITIAL_CLUSTER_STATE=new\"" >> $TARGET
 
       TARGET_DIR=/run/systemd/system/fleet.service.d
       TARGET="$TARGET_DIR/20-settings.conf"
       mkdir -p $TARGET_DIR     
       echo "[Service]" > $TARGET
-      echo "Environment=\"FLEET_ETCD_SERVERS=http://10.105.0.3:2379,http://10.105.0.5:2379,http://10.105.0.7:2379\"" >> $TARGET
+      echo "Environment=\"FLEET_ETCD_SERVERS=http://10.105.0.1:2379,http://10.105.0.3:2379,http://10.105.0.5:2379,http://10.105.0.7:2379,http://10.105.0.9:2379\"" >> $TARGET
       echo "Environment=\"FLEET_PUBLIC_IP=$PRIV_IP\"" >> $TARGET
       echo "Environment=\"FLEET_METADATA=role=service\"" >> $TARGET
      
