Forgot the units: section

--- a/coreos/cloud-config/init.yml
+++ b/coreos/cloud-config/init.yml
@@ -6,6 +6,7 @@
 # Generates unit drop-in for etc2.service
 #
 coreos:
+  units:
    - name: format-var-lib-docker.service
      command: start
      content: |
