--- a/coreos/cloud-config/worker-cloud-config.yml
+++ b/coreos/cloud-config/worker-cloud-config.yml
@@ -8,11 +8,11 @@ coreos:
     listen-client-urls: http://0.0.0.0:2379
 
   fleet:
-    etcd_servers: http://10.105.0.3:2379,http://10.105.0.5:2379,http://10.105.0.7:2379
+    etcd_servers: http://10.105.0.1:2379,http://10.105.0.3:2379,http://10.105.0.5:2379,http://10.105.0.7:2379,http://10.105.0.9:2379
     metadata: role=worker
 
-  locksmith:
-    endpoint: http://localhost:2379
+  #locksmith:
+  #  endpoint: http://localhost:2379
 
   units:
   - name: etcd2.service
@@ -21,13 +21,13 @@ coreos:
   - name: fleet.service
     command: start
 
-  - name: flanneld.service
-    drop-ins:
-      - name: 50-network-config.conf
-        content: |
-          [Service]
-          ExecStartPre=/usr/bin/etcdctl set /coreos.com/network/config '{"Network":"10.1.0.0/16"}'
-    command: start
+  #- name: flanneld.service
+  #  drop-ins:
+  #    - name: 50-network-config.conf
+  #      content: |
+  #        [Service]
+  #        ExecStartPre=/usr/bin/etcdctl set /coreos.com/network/config '{"Network":"10.1.0.0/16"}'
+  #  command: start
 
   - name: var-lib-docker.mount
     command: start
