--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -99,6 +99,7 @@ coreos:
     content: |
      [Unit]
       Description=Setting interfaces to down and restarting networking post boot.
+      Requires=network-online.target
       After=network-online.target
       Before=config-etcd2.service
 
@@ -111,8 +112,9 @@ coreos:
     content: |
       [Unit]
       Description = Config ETCD2
+      Requires=reset-interfaces.service
       Before = etcd2.service
-      After=reset-interfaces.service
+      After=multi-user.target
 
       [Service]
       User=root
