--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -100,7 +100,7 @@ coreos:
      [Unit]
       Description=Setting interfaces to down and restarting networking post boot.
       Requires=config-etcd2.service
-      After=network-online.target config-etcd2.service
+      After=config-etcd2.service network-online.target
 
       [Service]
       User=root
