--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -10,10 +10,10 @@ write_files:
     owner: root:root
     content: |
       #!/bin/bash
-      PRIV_IP=`ifconfig bond0 | sed -n 2p | awk '{ print $2 }'`
+      PRIV_IP=`ifconfig eno1 | sed -n 2p | awk '{ print $2 }'`
       TARGET_DIR=/run/systemd/system/etcd2.service.d/
       TARGET="$TARGET_DIR/20-settings.conf"
-      HOST=`/usr/bin/hostname | sed -e 's/-.*//'`
+      HOST=`/usr/bin/hostname`
       mkdir -p $TARGET_DIR
 
       echo "[Service]" > $TARGET
