Removed the stop/start of networkd..supposedly coreos does this for us.  Also moved the etcd and fleet to the last part of units

--- a/coreos/cloud-config/bonded-worker-cloud-config.yml
+++ b/coreos/cloud-config/bonded-worker-cloud-config.yml
@@ -13,10 +13,6 @@ coreos:
   #locksmith:
   #  endpoint: http://localhost:2379
   units:
-  - name: etcd2.service
-    command: start
-  - name: fleet.service
-    command: start
   #- name: flanneld.service
   #  drop-ins:
   #    - name: 50-network-config.conf
@@ -43,8 +39,8 @@ coreos:
        What=/dev/sdb
        Where=/data
        Type=btrfs
-  - name: systemd-networkd.service
-    command: stop
+#  - name: systemd-networkd.service
+#    command: stop
   - name: down-interfaces.service
     command: start
     content: |
@@ -60,9 +56,6 @@ coreos:
       [NetDev]
       Name=bond0
       Kind=bond
-
-      [Bond]
-      Mode=6
   - name: 20-eno1.network
     command: start
     content: |
@@ -87,7 +80,11 @@ coreos:
 
       [Network]
       DHCP=true
-  - name: systemd-networkd.service
+#  - name: systemd-networkd.service
+#    command: start
+  - name: etcd2.service
+    command: start
+  - name: fleet.service
     command: start
 
 write_files:
