Modifications to zookeeper unti files to work with new metadata

--- a/coreos/fleet/zookeeper4.service
+++ b/coreos/fleet/zookeeper4.service
@@ -12,4 +12,4 @@ ExecStop=/usr/bin/docker stop zookeeper4
 TimeoutStartSec=900s
 
 [X-Fleet]
-MachineMetadata=hostname=r105u07
+MachineMetadata=hostname=ip=10.105.0.7
