--- a/coreos/fleet/zookeeper1.service
+++ b/coreos/fleet/zookeeper1.service
@@ -12,4 +12,4 @@ ExecStop=/usr/bin/docker stop zookeeper1
 TimeoutStartSec=900s
 
 [X-Fleet]
-MachineMetadata=hostname=r105u01
+MachineMetadata=ip=10.105.0.1
