--- a/coreos/fleet/zookeeper3.service
+++ b/coreos/fleet/zookeeper3.service
@@ -12,4 +12,4 @@ ExecStop=/usr/bin/docker stop zookeeper3
 TimeoutStartSec=900s
 
 [X-Fleet]
-MachineMetadata=hostname=r105u05
+MachineMetadata=hostname=ip=10.105.0.5
