UseDomains by default is false..we need to set this to try to add the search path in resolv.conf

--- a/coreos/cloud-config/worker-cloud-config.yml
+++ b/coreos/cloud-config/worker-cloud-config.yml
@@ -104,6 +104,9 @@ write_files:
 
       [Network]
       DHCP=true
+
+      [DHCP]
+      UseDomains=true
    - path: /etc/modprobe.d/bonding.conf
      permissions: 0644
      owner: root
