--- a/coreos/cloud-config/utility-cloud-config.yml
+++ b/coreos/cloud-config/utility-cloud-config.yml
@@ -80,6 +80,9 @@ write_files:
 
       [Network]
       DHCP=true
+
+      [DHCP]
+      UseDomains=true
   - path: /etc/modprobe.d/bonding.conf
     permissions: 0644
     owner: root
