--- a/coreos/fleet/docker-registry.service
+++ b/coreos/fleet/docker-registry.service
@@ -4,13 +4,13 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStartPre=-/usr/bin/docker kill registry
-ExecStartPre=-/usr/bin/docker rm registry
+ExecStartPre=-/usr/bin/docker kill %p
+ExecStartPre=-/usr/bin/docker rm %p
 ExecStartPre=/usr/bin/docker pull registry:2
-ExecStart=/usr/bin/docker run --net=host --name %p -p 5000:5000 registry:2
-ExecStop=/usr/bin/docker stop registry
-TimeoutStartSec=900s
+ExecStart=/usr/bin/docker run --net=host --name %p -p 5000:5000 --restart=always -v /data/docker-registry:/var/lib/registry registry:2 
+ExecStop=/usr/bin/docker stop %p
+TimeoutStartSec=900
 
 [X-Fleet]
-MachineOf=mesos-master@%i.service
+MachineMetadata=ip=10.105.0.1
 
