--- a/coreos/fleet/mesosphere/mesos-slave@.service
+++ b/coreos/fleet/mesosphere/mesos-slave@.service
@@ -7,7 +7,7 @@ Requires=docker.service
 ExecStartPre=-/usr/bin/docker kill %p-%i
 ExecStartPre=-/usr/bin/docker rm %p-%i
 ExecStartPre=/usr/bin/docker pull mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404
-ExecStart=/usr/bin/docker run --net=host --name %p-%i -e 'MESOS_MASTER=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' -e 'MESOS_CONTAINERS=docker' -p 5051:5051 mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404
+ExecStart=/usr/bin/docker run --net=host --name %p-%i -e 'MESOS_MASTER=zk://10.105.0.1:2181,10.105.0.3:2181,10.105.0.5:2181,10.105.0.7:2181,10.105.0.9:2181/mesos' -e 'MESOS_CONTAINERS=docker,mesos' -e 'MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins' -p 5051:5051 mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404
 ExecStop=/usr/bin/docker stop %p-%i
 TimeoutStartSec=900s
 
