Modified mesos-dns docker file

--- a/docker/mesos-dns/Dockerfile
+++ b/docker/mesos-dns/Dockerfile
@@ -1,5 +1,5 @@
 FROM mesosphere/mesos-dns
 MAINTAINER Matt Parker <matthew.parker@l-3com.com>
-ADD config.json /
+ADD dsra.json /
 EXPOSE 53
-CMD ["/usr/bin/mesos-dns"]
+CMD ["/mesos-dns", "config=dsra.json"]
