--- a/coreos/fleet/mesosphere/mesos-slave@.service
+++ b/coreos/fleet/mesosphere/mesos-slave@.service
@@ -7,7 +7,9 @@ Requires=docker.service
 ExecStartPre=-/usr/bin/docker kill %p-%i
 ExecStartPre=-/usr/bin/docker rm %p-%i
 ExecStartPre=/usr/bin/docker pull mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404
-ExecStart=/usr/bin/docker run --net=host --name %p-%i -p 5051:5051 -v /data/log/mesos-slave:/var/log/mesos -e 'MESOS_MASTER=zk://10.105.0.1:2181/mesos' -e 'MESOS_PORT=5051' -e 'MESOS_CONTAINERS=docker,mesos' -e 'MESOS_LOG_DIR=/var/log/mesos' -e 'MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins' mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404
+
+ExecStart=/usr/bin/docker run --privileged --net=host --name %p-%i -p 5051:5051 -v /sys:/sys -v /data/log/mesos-slave:/var/log/mesos/slave -v /usr/bin/docker:/usr/bin/docker:ro -v /var/run/docker.sock:/var/run/docker.sock -v /lib64/libdevmapper.so.1.02:/lib/libdevmapper.so.1.02:ro -v /lib64/libpthread.so.0:/lib/libpthread.so.0:ro -v /lib64/libsqlite3.so.0:/lib/libsqlite3.so.0:ro -v /lib64/libudev.so.1:/lib/libudev.so.1:ro  -e 'MESOS_DOCKER_IMAGE=mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404' -e 'MESOS_DOCKER_SOCK=/var/run/docker.sock' -e 'MESOS_ISOLATOR=cgroups/cpu,cgroups/mem' -e 'MESOS_WORK_DIR=/var/lib/mesos/slave' -e 'MESOS_MASTER=zk://10.105.0.1:2181/mesos' -e 'MESOS_PORT=5051' -e 'MESOS_CONTAINERIZERS=docker,mesos' -e 'MESOS_LOG_DIR=/var/log/mesos/slave' -e 'MESOS_EXECUTOR_REGISTRATION_TIMEOUT=5mins' mesosphere/mesos-slave:0.23.0-1.0.ubuntu1404 
+
 ExecStop=/usr/bin/docker stop %p-%i
 TimeoutStartSec=900s
 
